--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
 		"react-router-dom": "^6.4.3",
-		"react-slick": "^0.29.0"
+		"react-slick": "^0.29.0",
+		"slick-carousel": "^1.8.1"
 	}
 }
